--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
+    "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1"
   }
