--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
     "mssql": "^11.0.1",
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "xlsx": "^0.18.5"
   }
 }
